Prevent part of the page from being hidden by the footer.

--- a/properties.css
+++ b/properties.css
@@ -124,7 +124,7 @@ input[type=file]::file-selector-button {
     margin: auto;
     text-align: center;
 
-    padding-bottom: 100px;
+    padding-bottom: 200px;
 }
 
 .content ul {
